<resources>
    <string name="app_name">ABG</string>
    <string name="arterial">Arterial Blood</string>
    <string name="gas">Gas Guide</string>
    <string name="fiO2">fiO2 (% / 100) </string>
    <string name="percent">% O2 in \ninspired air</string>
    <string name="pH"> pH </string>
    <string name="pH_range">7.35 – 7.45</string>
    <string name="partial_CO2"> PaCO2</string>
    <string name="partial_CO2_range">4.7 kPa - \n6.0 kPa</string>
    <string name="hco3_range">22 – 26 \nmmol/l</string>
    <string name="hco3_text">HCO3</string>
    <string name="partial_O2">PaO2</string>
    <string name="partial_O2_range"> > 10 kPa on air</string>
    <string name="be_range"> +/- 2 mmol/l </string>
    <string name="be_text">Base Excess</string>
    <string name="analyse_button">analyse button</string>
    <string name="base_excess">Base Excess</string>
    <string name="hco3">HCO3</string>
    <string name="paco2">PaCO2</string>
    <string name="pao2">PaO2</string>
    <string name="fio2_hint">fiO2</string>
    <string name="gas_analysis">Gas Analysis</string>
    <string name="pre_amble">This application is for education\nand understanding purposes only.\nYou should summon expert help interpreting Arterial Blood Gas Results.</string>
    <string name="hypoxia">Your patient is hypoxic\n\n</string>
    <string name="a_a_g_normal">The Alveolar - Arterial gradient is normal\n\n</string>
    <string name="a_a_g_high">The Alveolar - Arterial gradient is high\n\n</string>
    <string name="a_a_g_very_high">The Alveolar - Arterial gradient is very high.\nThere is a problem getting Oxygen through the alveolae into the blood of the lungs\n\n</string>
    <string name="alkalaemia">Your patient is alkalaemic\n\n</string>
    <string name="acidaemia">Your patient is acidaemic\n\n</string>
    <string name="severe_acidaemia">pH Values of 7.10 and below need \nswift correction\nsummon expert help quickly\n\n</string>
    <string name="ph_normal">Acid - base balance is normal\n\n</string>
    <string name="resp_acidosis_mild">respiratory acidosis - mild - a little too much CO2 in blood making it acidic\n\n</string>
    <string name="resp_acidosis_moderate">respiratory acidosis - moderate - too much CO2 in blood making it acidic\n\n</string>
    <string name="resp_acidosis_severe">respiratory acidosis - SEVERE - far too much CO2 in blood making it acidic\n\n</string>
    <string name="resp_alkalosis_mild">respiratory alkalosis - mild - most likely to be compensation for metabolic acidosis or manual over ventilation\n\n</string>
    <string name="resp_alkalosis_moderate">respiratory alkalosis - moderate- most likely to be compensation for metabolic acidosis or manual over ventilation\n\n</string>
    <string name="resp_alkalosis_severe">respiratory alkalosis - SEVERE - most likely to be compensation for metabolic acidosis or manual over ventilation\n\n</string>
    <string name="paco2_normal">Blood CO2 levels normal\n\n</string>
    <string name="metabolic_acidosis_mild">Metabolic acidosis - mild - probably due to ketoacidosis or lactic acidosis\n\n</string>
    <string name="metabolic_acidosis_moderate">Metabolic acidosis - moderate probably due to ketoacidosis or lactic acidosis\n\n</string>
    <string name="metabolic_acidosis_severe">Metabolic acidosis - severe probably due to ketoacidosis or lactic acidosis\n\n</string>
    <string name="metabolic_alkalosis_mild">Metabolic alkalosis - mild - often due to compensation for high PaCO2 such as in COPD and Asthma\n\n</string>
    <string name="metabolic_alkalosis_moderate">Metabolic alkalosis - moderate - often due to compensation for high PaCO2 such as in COPD and Asthma\n\n</string>
    <string name="metabolic_alkalosis_severe">Metabolic alkalosis - severe - often due to compensation for high PaCO2 such as in COPD and Asthma\n\n</string>
    <string name="bicarb_normal">Bicarbonate within normal range\n\n</string>
    <string name="primary_resp_acidosis">Primary respiratory acidosis\n\n</string>
    <string name="primary_metabolic_acidosis">Primary metabolic acidosis\n\n</string>
    <string name="primary_respiratory_alkalosis">Respiratory alkalosis\n\n</string>
    <string name="primary_metabolic_alkalosis">Metabolic alkalosis\n\n</string>
    <string name="resp_alkalosis_renal_comp">Respiratory alkalosis with renal compensation pH may be in normal range if renal compensation is virtually complete\n\n</string>
    <string name="metabolic_alkalosis_resp_comp">Metabolic alkalosis with\nrespiratory compensation pH may be in normal range if respiratory compensation is virtually complete\n\n</string>
    <string name="resp_acidosis_renal_comp">Respiratory acidosis with renal compensation pH may be in normal range if renal compensation is virtually complete\n\n</string>
    <string name="metabolic_acidosis_resp_comp">Metabolic acidosis with respiratory compensation pH may be in normal range if respiratory compensation is virtually complete\n\n</string>
    <string name="mixed_acidosis">Mixed metabolic and respiratory acidosis\n\n</string>
    <string name="mixed_alkalosis">Mixed metabolic and respiratory alkalosis\n\n</string>
</resources>